# ToolBelt

./: .gitignore  README.md
.gitignore/: .gitignore
daily-tasks-chain/: mcp.json  test.ipynb
enovel-tunner/: README.md  main.py
enovel-tunner/novels/: chuong30.txt  chuong31.txt
personal-mcp/: GEMINI.md  README.md  debug_middleware.py  diagnostic_mcp.py  err.txt  out.txt  pyproject.toml  test_minimal_server.py  test_server_config.py  test_server_run.py  test_tool_direct.py
personal-mcp/.gemini/: settings.json
personal-mcp/.github/: copilot-instructions.md
personal-mcp/.serena/: project.yml
personal-mcp/.serena/memories/: code_style.md  commands.md  file_structure.md  project_overview.md  tech_stack.md  vnstock_wrapping_progress.md
personal-mcp/src/personal_mcp/: config.py  main.py  middwares.py  prompts.py  server.py  tools.py
personal-mcp/src/personal_mcp/adapters/: __init__.py  vnstock_adapter.py
personal-mcp/src/personal_mcp/tools/: __init__.py  vnstock_tools.py  vnstock_tools_old.py
personal-mcp/tests/: test_client.py
tasks-chain/: .gitignore  README.md  chat.html
tasks-chain/docs/: SRS.md  SRS_1.0.md  SRS_1.1.md
tms addin/docs/: Tool chấm công.xlsx
token-finder/: background.js  content.js  manifest.json
tradding-mcp/: README.md  company_tools.py  finance_tools.py  fund_tools.py  gold_tools.py  listing_tools.py  main.py  mcp_instance.py  pyproject.toml  quote_tools.py  trading_tools.py  vnstock.test.ipynb
tradding-mcp/.serena/: project.yml
trading-mcp/: .gitignore  .http  README.md  client.py  main.py  mcp.json  pyproject.toml  server.py
trading-mcp/.github/: copilot-instructions.md
trading-mcp/src/vnstock_wraper/: __init__.py  server.py
trading-mcp/test/: client.py
(+73 files in other folders)
