[project]
name = "personal-mcp"
version = "0.1.0"
description = "Personal MCP Server - Many tools"
readme = "README.md"
authors = [
    { name = "Nguyễn Duy Cường", email = "cuongnd.ami@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
personal-mcp = "personal_mcp:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
